# timeseries-toolkit

./: .gitignore  .isort.cfg  README.md  setup.cfg
notebooks/: tutorial_book.ipynb
src/tftk/: data.py  naive_regressor.py  utils.py
tests/: test_data.py
tftk/: data.py
