[metadata]
name = tftk
version = 0.0.1
author = Jason Hu 
maintainer = Jason Hu
maintainer_email = dcjasonhu@gmail.com
url = https://github.com/jason-hu7/timeseries-toolkit
description = A set of time-series tools designed for make your time series analysis less painful
long_description = file: README.md
long_description_content_type= text/markdown
keywords = time series analysis, time series forecast
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.6
package_dir =
    =src
packages = find:
install_requires =
    numpy>=1.18.2
    pandas>=0.23.4
    matplotlib>=3.0
    scikit-learn>=0.20.2

[options.packages.find]
where = src
exclude =
    tests
    docs

[options.extras_require]
test =
    pytest>=4
